changed api